--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -102,26 +102,7 @@ emu_theses$text <- convert_pdf_text(pdf_paths)
 #| echo: false
 
 emu_theses$text_clean <- emu_theses$text |>
-  clean_basic() |>
-  str_remove_all(find_meta_stopwords(emu_theses)) |> 
-  str_remove_all(subject_stopwords()) |> 
-  str_remove_all(document_stopwords())
-```
-
-```{r}
-#| label: preview
-#| include: false
-
-# Preview theses
-emu_theses %>% 
-  arrange(graduation_year) %>% 
-  pull(text_clean) %>% 
-  str_sub(1, 500)
-
-# Preview theses
-hist(str_length(emu_theses$text_clean))
-
-Encoding(emu_theses$text_clean)
+  clean_basic() 
 ```
 
 # Introduction
@@ -201,15 +182,15 @@ Word-level tokenisation was applied with the `unnest_tokens()` function of the `
 ```{r}
 #| label: stop-words
 
-urbanism_stopwords <- urbanism_stopwords() 
-thesis_stopwords <- thesis_stopwords()
+emu_theses$text_clean <- emu_theses$text_clean |>
+  str_remove_all(find_meta_stopwords(emu_theses)) |> 
+  str_remove_all(subject_stopwords()) |> 
+  str_remove_all(document_stopwords())
 
 emu_theses_words <- emu_theses |> 
   select(title, text_clean) |> 
-  unnest_tokens(output = word, input = text_clean) |>   # remove punctuation, convert to lowercase, seperate all words
-  anti_join(stop_words, by = "word") |> 
-  anti_join(urbanism_stopwords, by = "word") |> 
-  anti_join(thesis_stopwords, by = "word")
+  unnest_tokens(output = word, input = text_clean) |>   # remove punctuation, convert to lowercase, separate all words
+  anti_join(tidytext::stop_words, by = "word")
 ```
 
 Stemming is a pre-processing step that needs to be carefully thought through, as it might either degrade topic modeling or produce no meaningful results [@hvitfeldt2021a].
