--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -87,8 +87,8 @@ all_theses <-
 
 ## Read only metadata for theses with PDF available
 emu_theses <- 
-  read_csv(here(data_path, "theses-metadata.csv")) %>%
-  mutate(text = "") %>%
+  read_csv(here(data_path, "theses-metadata.csv")) |>
+  mutate(text = "") |>
   filter(!is.na(pdf_via))
 
 pdf_paths <- here(data_path, emu_theses$file_name)
@@ -125,9 +125,9 @@ emu_theses$text_clean <- emu_theses$text |>
 #| include: false
 
 # Preview theses in increasing order of graduation year
-emu_theses %>% 
-  arrange(graduation_year) %>% 
-  pull(text_clean) %>% 
+emu_theses |> 
+  arrange(graduation_year) |> 
+  pull(text_clean) |> 
   head_text(head_n = 5)
 
 # Show distribution of the length of theses
@@ -193,19 +193,19 @@ For analyses in which word-level tokenisation was chosen, stop words, i.e., comm
 ```{r}
 #| label: stop-words
 
-stop_words_custom <- emu_theses %>% 
-  unnest_tokens(output = word, input = title) %>%   ### add words from the title
-  select(word) %>% 
+stop_words_custom <- emu_theses |> 
+  unnest_tokens(output = word, input = title) |>   ### add words from the title
+  select(word) |>
   rbind(., data.frame(word = c("preface", "foreword", "introduction", "conclusion", "thesis", 
-                               "source", "author"))) %>% 
+                               "source", "author"))) |>
   # rbind(., data.frame(word = c("city", "urban", "urbanism"))) %>% 
   rbind(., data.frame(word = c("hab", "km")))
 
-emu_theses_words <- emu_theses %>%
-  mutate(author = paste(first_name, last_name)) %>% 
-  select(author, title, text, -c(graduation_year, first_name, last_name)) %>% 
-  unnest_tokens(output = word, input = text) %>%   # remove punctuation, convert to lowercase, seperate all words
-  anti_join(stop_words, by = "word") %>%  # remove stop words
+emu_theses_words <- emu_theses |>
+  mutate(author = paste(first_name, last_name)) |> 
+  select(author, title, text, -c(graduation_year, first_name, last_name)) |> 
+  unnest_tokens(output = word, input = text) |>   # remove punctuation, convert to lowercase, seperate all words
+  anti_join(stop_words, by = "word") |>  # remove stop words
   anti_join(stop_words_custom, by = "word")
 ```
 
@@ -216,7 +216,7 @@ Stemming is a pre-processing step that needs to be carefully thought through, as
 
 emu_theses_words %>% 
   mutate(stem = wordStem(words = word, 
-                         language = "porter")) %>%  # Implement the Porter stemming algorithm for English provided by the SnowballC package
+                         language = "porter")) |>  # Implement the Porter stemming algorithm for English provided by the SnowballC package
   count(stem, sort = TRUE)
 ```
 
@@ -350,21 +350,21 @@ ggraph(bigram_graph, layout = "fr") +
 
 ## Higgh frequency bigrams ----
 
-emu_theses_bigrams_top <- emu_theses_bigrams %>%
-  group_by(title) %>%
-  count(bigram, sort = TRUE) %>%
-  slice_max(n, n = 20) %>%        ### top_n is superseded; better use slice_max instead
+emu_theses_bigrams_top <- emu_theses_bigrams |>
+  group_by(title) |>
+  count(bigram, sort = TRUE) |>
+  slice_max(n, n = 20) |>        ### top_n is superseded; better use slice_max instead
   # filter(n > 50)                ### filter words with a minimum count
-  ungroup() %>% 
+  ungroup() |>
   mutate(bigram = reorder(bigram, n))
 
-emu_theses_bigrams_top_all <- emu_theses_bigrams %>%
-  count(bigram, sort = TRUE) %>%
-  slice_max(n, n = 20) %>%        ### top_n is superseded; better use slice_max instead
+emu_theses_bigrams_top_all <- emu_theses_bigrams |>
+  count(bigram, sort = TRUE) |>
+  slice_max(n, n = 20) |>        ### top_n is superseded; better use slice_max instead
   # filter(n > 50)                ### filter words with a minimum count
   mutate(bigram = reorder(bigram, n))
 
-emu_theses_bigrams_top %>%
+emu_theses_bigrams_top |>
   filter(title == unique(title)[1:6]) |> 
   ggplot(aes(x = bigram, y = n, fill = title)) +
   geom_col() +
