Remove duplicate analysis

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -283,13 +283,7 @@ get_top_words_per_document(data = emu_theses_words,
 ```
 
 ```{r}
-# Which are the top n most frequently used words in all theses`?
-get_top_words_per_corpus(data = emu_theses_words, 
-                         top_n = 5)
-```
-
-```{r}
-# Which are the top n most frequently used words in all theses`?
+# Which are the top n most frequently used words in all theses?
 get_top_words_per_corpus(data = emu_theses_words, 
                          top_n = 20)
 ```
