--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -221,21 +221,13 @@ emu_theses_words %>%
 Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017].
 
 ```{r}
-# The {topicmodels} package requires a document-term matrix as input
-emu_theses_dtm <- convert_to_dtm(emu_theses_words, "title", "word")
-emu_theses_dtm
+emu_theses_topics <- get_topics(emu_theses_words)
 
-# We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling
-# In LDA, each document is a mixture of topics and each topic is a mixture of words
-emu_theses_lda <- LDA(emu_theses_dtm, k = 2, control = list(seed = 2023))
-emu_theses_lda
-
-# Tidy model with beta statistic
-emu_theses_topics <- tidy(emu_theses_lda, matrix = "beta")
-emu_theses_topics
+emu_theses_topics_terms <- tidy(emu_theses_topics, matrix = "beta")
+emu_theses_topics_documents <- tidy(emu_theses_topics, matrix = "gamma")
 
 # The top 10 words that are the most common in each topic
-emu_theses_top_terms <- emu_theses_topics |> 
+emu_theses_top_terms <- emu_theses_topics_terms |> 
   group_by(topic) |> 
   top_n(20, beta) |> 
   ungroup() |> 
@@ -249,7 +241,7 @@ emu_theses_top_terms |>
   coord_flip()
 
 # 
-beta_spread <- emu_theses_topics |> 
+beta_spread <- emu_theses_topics_terms |> 
   mutate(topic = paste0("topic", topic)) |> 
   spread(topic, beta) |> 
   filter(topic1 > 0.001, topic2 > .001) |> 
@@ -266,22 +258,19 @@ beta_spread %>%
   geom_col() +
   labs(x = "Log2 ratio of beta in topic 2 / topic 1", y = NULL)
 
-emu_theses_documents <- tidy(emu_theses_lda, matrix = "gamma")
-emu_theses_documents
-
-emu_theses_documents |> 
+emu_theses_topics_documents |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
   geom_bar(stat = "identity") + 
   coord_flip()
 
-emu_theses_documents |> 
+emu_theses_topics_documents |> 
   inner_join(emu_theses |> select(title, graduation_year), by = c("document" = "title")) |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
   geom_bar(stat = "identity") + 
   coord_flip() + 
   facet_wrap(~ graduation_year, ncol = 1, scales = "free", drop = TRUE)
 
-emu_theses_documents |> 
+emu_theses_topics_documents |> 
   inner_join(emu_theses |> select(title, graduation_year), by = c("document" = "title")) |> 
   ggplot(aes(x = factor(graduation_year), y = topic, fill = factor(topic))) +
   geom_col()
