--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -172,7 +172,7 @@ For analyses in which word-level tokenisation was chosen, stop words, i.e., comm
 emu_theses$text_clean <- emu_theses$text_clean |>
   str_remove_all(find_meta_stopwords(emu_theses)) |> 
   str_remove_all(urbanism_stopwords(
-    add_stopwords = c("emu", "european postgraduate master in urbanism"))) |>
+    add_stopwords = c("emu", "european postgraduate master in urbanism", "tu delft", "ku leuven", "upcs barcelona", "iuav venice"))) |>
   str_remove_all(thesis_stopwords(add_stopwords = c("advisor", "prof")))
 
 emu_theses_words <- emu_theses |> 
