--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -508,7 +508,113 @@ emu_theses_words_count |>
   coord_flip()
 ```
 
-The `tf-idf` statistic shows high values for the names of thesis locations that tend to be high-frequency thesis-specific words. As such, it shows words that are the most important to one document in a collection of documents [@silge2017].
+```{r word-embeddings}
+
+tidy_emu_theses <- emu_theses |> 
+  select(title, text_clean) |> 
+  unnest_tokens(word, text_clean) |> 
+  add_count(word) |> 
+  filter(n >= 50) |> 
+  select(-n)
+
+nested_words <- tidy_emu_theses |> 
+  nest(words = c(word))
+
+nested_words
+
+slide_windows <- function(tbl, window_size) {
+  skipgrams <- slider::slide(
+    tbl,
+    ~.x,
+    .after = window_size - 1,
+    .step = 1,
+    .complete = TRUE
+  )
+
+  safe_mutate <- safely(mutate)
+  
+  out <- map2(skipgrams,
+              1:length(skipgrams),
+              ~ safe_mutate(.x, window_id = .y))
+  
+  out |> 
+    transpose() |> 
+    pluck("result") |> 
+    compact() |> 
+    bind_rows()
+}
+
+library(widyr)
+library(furrr)
+
+plan(multisession)
+
+tidy_pmi <- nested_words |> 
+  mutate(words = future_map(words, slide_windows, 10L)) |> 
+  unnest(words) |> 
+  unite(window_id, title, window_id) |> 
+  pairwise_pmi(word, window_id)
+
+tidy_pmi
+
+tidy_word_vectors <- tidy_pmi |> 
+  widely_svd(
+    item1, item2, pmi,
+    nv = 100, maxit = 1000
+  )
+
+tidy_word_vectors
+
+nearest_neighbors <- function(df, token) {
+  df |> 
+    widely(
+      ~ {
+        y <- .[rep(token, nrow(.)), ]
+        res <- rowSums(. * y) /
+          (sqrt(rowSums(. ^ 2)) * sqrt(sum(.[token, ] ^ 2)))
+        
+        matrix(res, ncol = 1, dimnames = list(x = names(res)))
+      },
+      sort = TRUE
+    )(item1, dimension, value) |> 
+    select(-item2)
+}
+
+tidy_word_vectors |> 
+  nearest_neighbors("resilience")
+
+tidy_word_vectors |> 
+  filter(dimension <= 24) |> 
+  group_by(dimension) |> 
+  top_n(12, abs(value)) |> 
+  ungroup() |> 
+  mutate(item1 = reorder_within(item1, value, dimension)) |> 
+  ggplot(aes(item1, value, fill = dimension)) +
+  geom_col(alpha = 0.8, show.legend = FALSE) +
+  facet_wrap(~dimension, scales = "free_y", ncol = 4) +
+  scale_x_reordered() +
+  coord_flip() +
+  labs(
+    x = NULL,
+    y = "Value",
+    title = "First 24 principal components for text of theses",
+    subtitle = "Top words contributing to the components that explain the most variation"
+  )
+
+word_matrix <- tidy_emu_theses |> 
+  count(title, word) |> 
+  cast_sparse(title, word, n)
+
+embedding_matrix <- tidy_word_vectors |> 
+  cast_sparse(item1, dimension, value)
+
+doc_matrix <- word_matrix %*% embedding_matrix
+
+dim(doc_matrix)
+
+doc_matrix
+```
+
 
 # Discussion
 
