--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -206,7 +206,8 @@ emu_theses_words %>%
 
 ## Topic model
 
-Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017].
+Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017]. We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling. In LDA, each document is a mixture of topics and each topic is a mixture of words. The probability of a term being part of a topic is given by the beta statistic. The probability of a document being part of a topic is given by the gamma statistic.
+
 
 ```{r}
 # The topicmodels package requires a document-term matrix as input
@@ -216,8 +217,7 @@ emu_theses_dtm <- emu_theses_words |>
 
 emu_theses_dtm
 
-# We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling
-# In LDA, each document is a mixture of topics and each topic is a mixture of words
+# Fit LDA model
 emu_theses_lda <- LDA(emu_theses_dtm, k = 2, control = list(seed = 2023))
 emu_theses_lda
 
@@ -225,7 +225,7 @@ emu_theses_lda
 emu_theses_topics <- tidy(emu_theses_lda, matrix = "beta")
 emu_theses_topics
 
-# The top 10 words that are the most common in each topic
+# The top n words that are the most common in each topic
 emu_theses_top_terms <- get_top_words_per_topic(emu_theses_topics, 20)
 
 emu_theses_top_terms |> 
