--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -509,81 +509,23 @@ emu_theses_words_count |>
   coord_flip()
 ```
 
-Describe word embeddings ...
+### Word embeddings  
 
-```{r word-embeddings}
+[Describe word embeddings ...]
+
+```{r word-embeddings-pmi}
 #| include: false
 
-# Prepare tidy data frame for word embeddings
-tidy_emu_theses <- emu_theses |> 
-  select(title, text_clean) |> 
-  unnest_tokens(word, text_clean) |> 
-  add_count(word) |> 
-  filter(n >= 50) |> 
-  select(-n)
-
-# Create a nested data frame with one row per thesis
-nested_words <- tidy_emu_theses |> 
-  nest(words = c(word))
-
-```
-
-
-```{r word-embeddings}
-
-# Create sliding window function to calculate skipgram probabilities,
-# that is, how often each word occurs near each other word.
-# A small window size of 3-4 shows how a word is used, while a larger  
-# window size of, say, 10 gives more information about the domain topic.
-slide_windows <- function(tbl, window_size) {
-  # Iterate through an input vector with a fixed window size
-  skipgrams <- slider::slide(
-    tbl,
-    ~.x,
-    .after = window_size - 1,
-    .step = 1L,
-    .complete = TRUE  # Only evaluate function on complete windows
-  )
-
-  # Run even when unsuccessful
-  safe_mutate <- safely(mutate)
-  
-  # Map safe_mutate to skipgrams 
-  out <- map2(skipgrams,
-              1:length(skipgrams),
-              ~ safe_mutate(.x, window_id = .y))
-  
-  out |> 
-    transpose() |>  # Transpose `result` and `error` into columns,
-    pluck("result") |>  # only keep `result`,
-    compact() |>  # remove any NULL values [is this for the last windows?],
-    bind_rows()  # and bind all rows into a single data frame.
-}
-```
-
-
-```{r word-embeddings}
-
-# To reduce computation time, we use the {furrr} 
-# and underlying {future} packages for parallel processing
-future::plan(multisession)
-
-# To calculate how often words occur on their own or tigether with other words
-# we use point-wise mutual information (PMI)
-tidy_pmi <- nested_words |> 
-  mutate(words = future_map(words, slide_windows, 4L)) |> 
-  unnest(words) |> 
-  unite(window_id, title, window_id) |> 
-  pairwise_pmi(word, window_id)
+# To what extent do words co-occur with other words?
+tidy_pmi <- get_pmi(emu_theses, title_col = "title", text_col = "text_clean")
 
 ```
 
 The high-dimensional sparse matrix of word features is projected into reduced, 100-dimensional set of features.
 
-```{r word-embeddings}
+```{r word-embeddings-svd}
 
 # Determine word vectors using SVD, a method for dimensionality reduction
-# The resulting matrix will be of size n_voc * n_dim instead of n_voc * n_voc
 tidy_word_vectors <- tidy_pmi |> 
   widely_svd(
     item1, item2, pmi,
@@ -592,50 +534,22 @@ tidy_word_vectors <- tidy_pmi |>
 
 ```
 
+[What terms should be checked with the function below?]
 
-```{r word-embeddings}
+```{r word-embeddings-nn}
 
 # Calculate nearest neighbours of a given word
-nearest_neighbors <- function(df, token) {
-  df |> 
-    widely(
-      ~ {
-        y <- .[rep(token, nrow(.)), ]
-        res <- rowSums(. * y) /
-          (sqrt(rowSums(. ^ 2)) * sqrt(sum(.[token, ] ^ 2)))
-        
-        matrix(res, ncol = 1, dimnames = list(x = names(res)))
-      },
-      sort = TRUE
-    )(item1, dimension, value) |> 
-    select(-item2)
-}
-
 tidy_word_vectors |> 
-  nearest_neighbors("price")
+  nearest_neighbors("resilience")
+
 ```
 
+The first [?] components... [what do they show?]
 
 ```{r word-embeddings}
 
 # The first n components with top words found in the corpus of theses
-tidy_word_vectors |> 
-  filter(dimension <= 24) |> 
-  group_by(dimension) |> 
-  top_n(12, abs(value)) |> 
-  ungroup() |> 
-  mutate(item1 = reorder_within(item1, value, dimension)) |> 
-  ggplot(aes(item1, value, fill = dimension)) +
-  geom_col(alpha = 0.8, show.legend = FALSE) +
-  facet_wrap(~dimension, scales = "free_y", ncol = 4) +
-  scale_x_reordered() +
-  coord_flip() +
-  labs(
-    x = NULL,
-    y = "Value",
-    title = "First 24 principal components for text of theses",
-    subtitle = "Top words contributing to the components that explain the most variation"
-  )
+visualise_first_n_components(tidy_word_vectors, 24, 12)
 
 ```
 
