--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -129,6 +129,8 @@ Distinctive features of the program:
 - provides a bridge towards PhD-level research
 - all students had an exchange semester at one of the other three program universities
 
+
+
 In order to describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: `r nrow(all_theses)` theses with an average of `r mean(str_length(emu_theses$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(all_theses$grad_year, na.rm = TRUE), "-", max(all_theses$grad_year, na.rm = TRUE))`. 
 
 # Methods
@@ -169,7 +171,7 @@ Word-level tokenisation was applied with the `unnest_tokens()` function of the `
 
 ### Stop words
 
-For analyses in which word-level tokenisation was chosen, stop words, i.e., common words or words that do not add much meaning, were removed in the data preparation stage. Global, subject-specific and document stop words [@hvitfeldt2021a] were differentiated. As all theses were written in English, the pre-made "snowball" lexicon was used to remove global stop words. <!-- We tried to create a custom global stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words, but no significant imoprvement was observed in the result. --> Subject-specific stop words, we manually constructed a list based on our domain knowledge. Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as subject-specific stop words as well. Finally, titles and author names were removed as document stop words on document-level.
+For analyses in which word-level tokenisation was chosen, stop words, i.e., common words or words that do not add much meaning, were removed in the data preparation stage. Global, subject-specific and document stop words [@hvitfeldt2021a] were differentiated. As all theses were written in English, the pre-made "snowball" lexicon was used to remove global stop words. <!-- We tried to create a custom global stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words, but no significant improvement was observed in the result. --> We manually constructed a list of subject-specific stop words based on our domain knowledge. Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as subject-specific stop words as well. Finally, titles and author names were removed as document stop words.
 
 ```{r stop-words}
 
@@ -184,6 +186,10 @@ emu_theses_words <- emu_theses |>
   unnest_tokens(output = word, input = text_clean) |>   # remove punctuation, convert to lowercase, separate all words
   anti_join(tidytext::stop_words, by = "word")
 
+# TODO can we use this instead of the short_words function?
+emu_theses_words <- emu_theses_words |> 
+  filter(nchar(word) > 4)
+
 ```
 
 Additional checks were made to the document in search for previously undetected stop words. The checks included identifying words consisting of four or less characters that extensively used in the text corpus. 
@@ -194,9 +200,7 @@ Additional checks were made to the document in search for previously undetected 
 #short_words(emu_theses$text_clean, scope = 'corpus')
 short_words(emu_theses_words$word)
 
-
 ```
-
 
 Stemming is a pre-processing step that needs to be carefully thought through, as it might either degrade topic modeling or produce no meaningful results [@hvitfeldt2021a].
 
@@ -206,43 +210,46 @@ emu_theses_words %>%
   mutate(stem = wordStem(words = word, 
                          language = "porter")) |>  # Implement the Porter stemming algorithm for English provided by the SnowballC package
   count(stem, sort = TRUE)
+
 ```
 
 ## Topic model
 
-Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017]. We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling. In LDA, each document is a mixture of topics and each topic is a mixture of words. The probability of a term being part of a topic is given by the beta statistic. The probability of a document being part of a topic is given by the gamma statistic.
+Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017]. We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling. In LDA, each document is a mixture of topics and each topic is a mixture of words. The probability of a term being part of a topic is given by the $\beta$ (beta) statistic, while the probability of a document being part of a topic is given by the $\gamma$ (gamma) statistic.
+
+```{r topic-model-lda}
+
+# Prepare document-term matrix as input for LDA model
+emu_dtm <- convert_to_dtm(emu_theses_words, "title", "word")
+
+# Create LDA model
+emu_lda <- LDA(emu_dtm, k = 2, control = list(seed = 2023))
+
+```
 
 
-```{r}
-# The {topicmodels} package requires a document-term matrix as input
-emu_theses_dtm <- convert_to_dtm(emu_theses_words, "title", "word")
-emu_theses_dtm
 
-# Fit LDA model
-emu_theses_lda <- LDA(emu_theses_dtm, k = 2, control = list(seed = 2023))
-emu_theses_lda
+```{r topic-model-beta}
 
-# Tidy model with beta statistic
-emu_theses_topics <- tidy(emu_theses_lda, matrix = "beta")
-emu_theses_topics
+# Extract topics as mixtures of terms from LDA model
+emu_topics <- tidy(emu_lda, matrix = "beta")
 
-# The top n words that are the most common in each topic
-emu_theses_top_terms <- get_top_words_per_topic(emu_theses_topics, 20)
+# The top n most common words in each topic
+emu_theses_top_terms <- get_top_words_per_topic(emu_topics, 20)
 
+# TODO create visualisation function
 emu_theses_top_terms |> 
   ggplot(aes(reorder(term, beta), beta, fill = factor(topic))) +
   geom_col(show.legend = FALSE) +
   facet_wrap(~ topic, scales = "free") +
   coord_flip()
 
-# 
+# TODO can this be generalised to more than two topics?
 beta_spread <- emu_theses_topics |> 
   mutate(topic = paste0("topic", topic)) |> 
   spread(topic, beta) |> 
   filter(topic1 > 0.001, topic2 > .001) |> 
   mutate(log_ratio = log2(topic2/topic1))
-
-beta_spread
 
 beta_spread %>%
   group_by(direction = log_ratio > 0) %>%
@@ -252,24 +259,32 @@ beta_spread %>%
   ggplot(aes(log_ratio, term)) +
   geom_col() +
   labs(x = "Log2 ratio of beta in topic 2 / topic 1", y = NULL)
+```
 
-emu_theses_documents <- tidy(emu_theses_lda, matrix = "gamma")
-emu_theses_documents
 
-emu_theses_documents |> 
+```{r topic-model-gamma}
+
+# Extract documents as mixtures of topics from LDA model
+emu_documents <- tidy(emu_lda, matrix = "gamma")
+
+emu_documents |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
   geom_bar(stat = "identity") + 
   coord_flip()
 
-emu_theses_documents |> 
-  inner_join(emu_theses |> select(title, graduation_year), by = c("document" = "title")) |> 
+emu_documents |> 
+  inner_join(emu_theses |> 
+               select(title, graduation_year), 
+             by = c("document" = "title")) |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
   geom_bar(stat = "identity") + 
   coord_flip() + 
   facet_wrap(~ graduation_year, ncol = 1, scales = "free", drop = TRUE)
 
-emu_theses_documents |> 
-  inner_join(emu_theses |> select(title, graduation_year), by = c("document" = "title")) |> 
+emu_documents |> 
+  inner_join(emu_theses |> 
+               select(title, graduation_year), 
+             by = c("document" = "title")) |> 
   ggplot(aes(x = factor(graduation_year), y = topic, fill = factor(topic))) +
   geom_col()
 ```
@@ -279,14 +294,12 @@ emu_theses_documents |>
 
 ```{r}
 # Which are the top n most frequently used words in each thesis?
-get_top_words_per_document(data = emu_theses_words, 
-                           top_n = 3)
+get_top_words_per_document(data = emu_theses_words, top_n = 3)
 ```
 
 ```{r}
 # Which are the top n most frequently used words in all theses?
-get_top_words_per_corpus(data = emu_theses_words, 
-                         top_n = 20)
+get_top_words_per_corpus(data = emu_theses_words, top_n = 20)
 ```
 
 <!-- ```{r} -->
