--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -52,12 +52,13 @@ Highlights: `r rmarkdown::metadata$highlights`
 # Load packages ----
 ## List packages to be loaded
 packages <- c(
-  "here",                                        # Managing paths
-  "tidyverse", "reshape2", "widyr",              # Data manipulation and visualisation
-  "furrr",                                       # Parallel use of purrr::map() functions
-  "tidytext", "SnowballC", "tm", "topicmodels",  # Text processing and analysis
-  "tidygeocoder",                                # Working with spatial data
-  "igraph", "ggraph"                             # Network analysis and visualization
+  "here",                               # Managing paths
+  "tidyverse", "reshape2", "widyr",     # Data manipulation and visualisation
+  "furrr",                              # Parallel use of purrr::map() functions
+  "tidytext", "SnowballC", "tm",        # Text processing and analysis
+  "topicmodels", "LDAvis",              # Topic modeling
+  "tidygeocoder",                       # Working with spatial data
+  "igraph", "ggraph"                    # Network analysis and visualization
 )
 
 ## Load required packages, install them if needed
